--- a/shell/app/modules/project/pages/deploy/add-deploy/add-release.scss
+++ b/shell/app/modules/project/pages/deploy/add-deploy/add-release.scss
@@ -3,11 +3,11 @@
   .load-more-selector {
     .results {
       padding: 0;
-      border: 1px solid transparent;
-      min-height: 24px;
+      border: 0;
+      min-height: 30px;
       > div {
-        line-height: 24px !important;
-        height: 24px !important;
+        line-height: 30px !important;
+        height: 30px !important;
       }
 
       &:hover {
