--- a/shell/app/modules/project/pages/deploy/index.scss
+++ b/shell/app/modules/project/pages/deploy/index.scss
@@ -4,6 +4,9 @@
     padding: 0 12px;
     overflow-x: hidden;
   }
+  .ant-timeline-item-head {
+    background-color: transparent;
+  }
   .ant-timeline-item .ant-timeline-item-content {
     margin: 0 0 0 16px;
   }
