fix: artifact detail page top button style

--- a/shell/app/modules/publisher/pages/artifacts/index.scss
+++ b/shell/app/modules/publisher/pages/artifacts/index.scss
@@ -1,6 +1,8 @@
 .artifacts-list-container {
   display: flex;
   height: 100%;
+  white-space: nowrap;
+  overflow: auto;
 }
 
 .artifacts-list-page {
