--- a/shell/app/modules/project/pages/pipelines/components/form.scss
+++ b/shell/app/modules/project/pages/pipelines/components/form.scss
@@ -4,3 +4,9 @@ div.project-release-select.ant-select {
     border: none;
   }
 }
+
+.project-pipeline-form {
+  .ant-alert-error .ant-alert-message {
+    color: $color-error;
+  }
+}
