--- a/shell/app/modules/apiManagePlatform/pages/api-market/components/api-resource/resource.scss
+++ b/shell/app/modules/apiManagePlatform/pages/api-market/components/api-resource/resource.scss
@@ -60,26 +60,6 @@
       border-bottom-left-radius: 0;
     }
 
-    .ant-btn {
-      display: flex;
-      align-items: center;
-      padding: 0;
-      border-right: none;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-
-      &:hover,
-      &:focus {
-        border-color: #d9d9d9;
-        outline: 0;
-      }
-
-      .anticon-down {
-        margin: 2px 5px 0 0;
-        font-size: 10px;
-      }
-    }
-
     .icon-shanchu {
       margin: 8px 0 0 5px;
     }
@@ -87,111 +67,78 @@
     .api-icon {
       padding-right: 5px;
     }
-
-    .ant-select,
-    .ant-select-selection-selected-value {
-      width: 100%;
-      height: 32px;
-
-      .circle-container {
-        top: 9px;
-        width: $p12;
-        height: $p12;
-      }
-    }
   }
 
   .popconfirm-container {
     z-index: 9999;
   }
 
-  .api-method {
-    &-option {
-      position: relative;
-      align-items: center;
-      box-sizing: border-box;
-      border: 1px solid rgba($primary, 0);
-      border-radius: $radius;
-      cursor: pointer;
-      transition: all 0.3s;
+  .api-method-option {
+    position: relative;
+    box-sizing: border-box;
+    border: 1px solid rgba($color-primary, 0);
+    border-radius: $radius;
+    cursor: pointer;
+    transition: all 0.3s;
 
-      &:hover {
-        .btn-label {
-          border-right: 1px solid $lightgray;
-        }
+    .circle-container {
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+    }
+
+    .btn-icon,
+    .icon-color {
+      width: 14px;
+      height: 14px;
+      color: $white;
+      font-size: 12px;
+      text-align: center;
+      border: 1px solid rgba($color-primary, 0);
+      border-radius: 50%;
+      margin-right: 0;
+
+      &-get {
+        background-color: #00b49d;
+        border-color: #00b49d;
       }
 
-      .btn-label {
-        box-sizing: border-box;
-        width: 100px;
-        padding-left: 10px;
+      &-post {
+        background-color: #b890fa;
+        border-color: #b890fa;
       }
 
-      .circle-container {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 41px;
-        height: 32px;
-
-        .disableIcon {
-          position: relative;
-          right: 2px;
-        }
+      &-put {
+        background-color: #f2be24;
+        border-color: #f2be24;
       }
 
-      .btn-icon,
-      .icon-color {
-        width: $p12;
-        height: $p12;
-        color: $white;
-        font-size: 12px;
-        text-align: center;
-        border: 1px solid rgba($primary, 0);
-        border-radius: 50%;
+      &-patch {
+        background-color: #4b44c9;
+        border-color: #4b44c9;
+      }
 
-        &-get {
-          background-color: #00b49d;
-          border-color: #00b49d;
-        }
+      &-delete {
+        background-color: #d1344e;
+        border-color: #d1344e;
+      }
 
-        &-post {
-          background-color: #b890fa;
-          border-color: #b890fa;
-        }
+      &-options {
+        background-color: #00b5d1;
+        border-color: #00b5d1;
+      }
 
-        &-put {
-          background-color: #f2be24;
-          border-color: #f2be24;
-        }
+      &-head {
+        background-color: #17bc65;
+        border-color: #17bc65;
+      }
 
-        &-patch {
-          background-color: #4b44c9;
-          border-color: #4b44c9;
-        }
-
-        &-delete {
-          background-color: #d1344e;
-          border-color: #d1344e;
-        }
-
-        &-options {
-          background-color: #00b5d1;
-          border-color: #00b5d1;
-        }
-
-        &-head {
-          background-color: #17bc65;
-          border-color: #17bc65;
-        }
-
-        &-empty {
-          background-color: rgba($primary, 0);
-        }
+      &-empty {
+        background-color: rgba($color-primary, 0);
       }
     }
   }
-
   .api-tag-select {
     &-btn {
       padding: $p8;
