feat(msp): add alarm overview
feat(msp): add alarm overview

feat(msp): add alarm overview

feat(msp): remove  useless code

feat(msp): update MarkdownPreview

feat(msp): add event detail

feat(msp): add event detail

feat(msp): add onlyText badge

feat(msp): add onlyText badge

feat(msp): add onlyText badge

feat(msp): update time format

feat(msp): update time format

feat(msp): remove useless code

feat(msp): remove useless code

feat(msp): adjust router

feat: event

feat(msp): add enent router

feat(msp): convert params

--- a/shell/app/common/components/badge/index.scss
+++ b/shell/app/common/components/badge/index.scss
@@ -121,6 +121,10 @@
     }
   }
 
+  &.erda-badge-hide-bg{
+    background: transparent;
+  }
+
   &.badge-hover-active:hover {
     .erda-badge-status-dot {
       display: none;
