--- a/shell/app/common/components/markdown-render/index.scss
+++ b/shell/app/common/components/markdown-render/index.scss
@@ -403,9 +403,10 @@
     overflow: auto;
     font-size: 13px;
     line-height: 19px;
-    background-color: #f8f8f8;
+    background-color: #f8f8f8 !important;
     border: 1px solid #cccccc;
     border-radius: 3px 3px 3px 3px;
+    font-family: SF Mono, Monaco, Inconsolata, Fira Mono, Droid Sans Mono, Source Code Pro, monospace;
   }
 
   pre code,
