--- a/shell/app/common/components/configurable-filter/external-item.scss
+++ b/shell/app/common/components/configurable-filter/external-item.scss
@@ -96,6 +96,7 @@
   display: flex;
   align-items: center;
   padding: 4px 2px 4px 8px;
+  height: 28px;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.1s ease-out;
