fix: fix filter style in select dropdown

--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -568,7 +568,7 @@ body {
       }
 
       .ant-select-item-option-state {
-        color: $color-purple-deep;
+        color: $color-purple-highlight;
       }
 
       .rc-virtual-list-holder {
