fix: update image avatar background to transparent

--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -511,6 +511,9 @@ body {
   .ant-avatar {
     background-color: rgb(89, 81, 108);
   }
+  .ant-avatar-image {
+    background: transparent;
+  }
 
   .ant-radio-group.ant-radio-group-solid {
     .ant-radio-button-wrapper {
