--- a/shell/app/common/components/configurable-filter/external-item.scss
+++ b/shell/app/common/components/configurable-filter/external-item.scss
@@ -99,8 +99,10 @@
   height: 28px;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.1s ease-out;
   background-color: $color-default-06;
+  :not(.ant-input-affix-wrapper) {
+    transition: background-color 0.1s ease-out;
+  }
 
   &-value {
     max-width: 180px;
