fix: rename list-item class to prevent misused with tailwind

--- a/shell/app/config-page/components/kanban/kanban.scss
+++ b/shell/app/config-page/components/kanban/kanban.scss
@@ -106,7 +106,7 @@
       }
     }
 
-    .list-item {
+    .kanban-list-item {
       margin-bottom: 12px;
       background-color: $white;
       border-radius: $radius;
