--- a/shell/app/modules/application/pages/problem/problem-detail.scss
+++ b/shell/app/modules/application/pages/problem/problem-detail.scss
@@ -1,33 +1,5 @@
 .comments-container {
-  .comments-section {
-    position: relative;
-    height: 22px;
-    margin: 16px 0;
-    color: $color-dark-2;
-    font-size: 14px;
-    line-height: 22px;
-    letter-spacing: 0;
-    text-align: center;
-
-    .section-line {
-      position: absolute;
-      top: 11px;
-      left: 0;
-      display: block;
-      width: 100%;
-      height: 1px;
-      border-bottom: 1px dashed $color-dark-1;
-    }
-
-    .comments-section-text {
-      position: relative;
-      z-index: 1;
-      padding: 0 8px;
-      background: $white;
-    }
-  }
-
-  .selecter-item {
+  .selector-item {
     width: 200px;
     margin-right: 10px;
   }
