feat: add issue relation on create mr

--- a/shell/app/modules/application/pages/repo/components/repo-mr-form.scss
+++ b/shell/app/modules/application/pages/repo/components/repo-mr-form.scss
@@ -34,3 +34,31 @@
   padding: 2px;
   font-size: 12px;
 }
+
+.repo-mr-form-assignee {
+  .ant-form-item-control-input-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.repo-mr-issue-relation {
+  .issue-relation-box {
+    width: 500px;
+  }
+}
+
+.repo-mr-bottom-bar {
+  z-index: 8;
+  padding: 8px 32px 0px 32px;
+  text-align: right;
+  background-color: $white;
+  border-top: 1px solid $color-border;
+
+  @include md-width() {
+    & {
+      padding: 8px 16px;
+    }
+  }
+}
