fix(dop): fix placeholder style

--- a/shell/app/common/components/load-more-selector/index.scss
+++ b/shell/app/common/components/load-more-selector/index.scss
@@ -86,7 +86,7 @@
       .ant-input {
         color: $white;
         background-color: transparent !important;
-        &::-webkit-input-placeholder {
+        &::placeholder {
           color: rgba($white, 0.3);
         }
       }
