fix(dop): fix member select dropdown style
fix(dop): fix member select dropdown style

--- a/shell/app/modules/project/pages/test-manage/case/manual-test.scss
+++ b/shell/app/modules/project/pages/test-manage/case/manual-test.scss
@@ -2,3 +2,17 @@
   display: flex;
   padding-top: 12px;
 }
+
+.filter-group-drawer {
+  .member-selector {
+    background: $white;
+
+    .results {
+      border-color: $color-border;
+      &:hover {
+        border-color: $color-primary;
+        box-shadow: none;
+      }
+    }
+  }
+}
