--- a/shell/app/modules/project/common/components/issue/time-trace.scss
+++ b/shell/app/modules/project/common/components/issue/time-trace.scss
@@ -1,6 +1,7 @@
 .time-trace {
-  padding: 0 8px 4px;
-  line-height: 18px;
+  padding: 3px 12px;
+  width: 67%;
+  height: 32px;
 
   &.active-hover:hover {
     background-color: $color-bg;
