feat(dop): new version issue detail page released :tada: (#3059)
* chore: merge master

* fix: member selector style

* refactor: update radio tab type

* feat: update edit field style

* feat: update issue meta fields style

* feat: update issue drawer header style

* refactor: update issue comment box

* refactor: update issue activities

* feat: remove useless style file

* fix: import

* refactor: change get app mr service to apiCreator

* feat: update issue activity style

* feat: support detect platform

* feat: loadmore selector support no border style

* feat: update type

* feat: update repo mr type and issue add mr relation

* feat: add batch operation common component

* feat: update edit field style

* feat: table footer support row selection operation

* feat: update issue add mr relation

* fix: submit issue comment only when input is focus

* feat: update issue activity style

* feat: update issue time trace style

* refactor: migrate project iteration service to apiCreator

* feat: change issue meta field responsive width

* refactor: update issue item style and logic

* feat: update issue item style

* refactor: update issue relation

* feat: update subscribe icon

* feat: update issue drawer

* refactor: migrate getIssue service to apiCreator

* refactor: update issue drawer and detail style

* feat: update issue drawer detail style

* refactor: update contractive filter type and split into standalone component

* refactor: update import

* feat: show shadow when scroll issue activity

* feat: support issue batch relate to mrs

* feat: remove redundant colon

* feat: make issue labels full width

* fix: issue time trace field width

* feat: change issue comment to normal textarea

* feat: support esc to collapse issue comment box

* fix: table row selection can not select all

* feat: lazy load labels list in issue detail drawer

* feat: only get special fields config in target type

* feat: update issue relation data list

* feat: show parent issu

--- a/shell/app/common/components/load-more-selector/index.scss
+++ b/shell/app/common/components/load-more-selector/index.scss
@@ -19,7 +19,7 @@
     width: 100%;
     min-height: 32px;
     max-height: 96px;
-    padding: 4px 6px 4px 12px;
+    padding: 0 6px 0 12px;
     overflow: auto;
     border: 1px solid $color-border;
     border-radius: $radius;
@@ -39,12 +39,16 @@
       }
     }
 
+    &.border-none {
+      box-shadow: none;
+    }
+
     .placeholder {
       color: $color-dark-3;
     }
 
     .values {
-      line-height: 20px;
+      line-height: 100%;
 
       .value-item {
         display: inline-block;
@@ -189,7 +193,7 @@
         align-items: center;
         // justify-content: space-between;
         margin: 0 8px;
-        padding: 9px 10px;
+        padding: 8px;
 
         .ant-checkbox {
           top: 0;
