--- a/shell/app/common/components/edit-field/index.scss
+++ b/shell/app/common/components/edit-field/index.scss
@@ -12,6 +12,12 @@
     }
   }
 
+  .ant-picker {
+    &:hover {
+      background-color: $color-default-06 !important;
+    }
+  }
+
   .ant-select-arrow,
   .anticon-calendar {
     opacity: 0;
@@ -40,16 +46,6 @@
     }
   }
 
-  .member-selector {
-    .results {
-      border: 1px solid transparent;
-
-      &:hover {
-        box-shadow: none;
-      }
-    }
-  }
-
   .with-error {
     .ant-input,
     .ant-select-selector {
@@ -63,16 +59,15 @@
     }
   }
 
+  .ant-input-suffix {
+    opacity: 0;
+  }
+
   &:hover {
     .ant-select-arrow,
-    .anticon-calendar {
+    .anticon-calendar,
+    .ant-input-suffix {
       opacity: 1;
-    }
-
-    .member-selector {
-      .results {
-        border-color: $color-active;
-      }
     }
   }
 }
