--- a/shell/app/modules/project/common/components/issue/time-input.scss
+++ b/shell/app/modules/project/common/components/issue/time-input.scss
@@ -1,6 +1,6 @@
 .issue-part-save-group {
-  position: relative;
-  top: 2px;
+  position: absolute;
+  top: 3px;
   right: 0;
   text-align: right;
 }
