--- a/shell/app/common/components/edit-field/index.scss
+++ b/shell/app/common/components/edit-field/index.scss
@@ -3,6 +3,8 @@
   .ant-input-affix-wrapper,
   .ant-picker,
   .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+    background: transparent;
+
     &:not(:focus) {
       border-color: transparent;
     }
