feat(dop): issue detail v2 released :tada:

--- a/shell/app/common/components/edit-field/index.scss
+++ b/shell/app/common/components/edit-field/index.scss
@@ -42,6 +42,10 @@
     .ant-select-selection-item {
       text-overflow: clip;
     }
+
+    .md-content {
+      padding: 0;
+    }
   }
 
   .with-error {
