refactor: update issue detail to v3 style

--- a/shell/app/common/components/edit-field/index.scss
+++ b/shell/app/common/components/edit-field/index.scss
@@ -10,6 +10,10 @@
     }
   }
 
+  .ant-select-multiple .ant-select-selector {
+    padding-left: 11px;
+  }
+
   .ant-picker {
     &:hover {
       background-color: $color-default-06 !important;
